# llm-lab

./: .env-template  .flake8  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  pyproject.toml
data/: .gitignore
notebooks/: template.ipynb
